tests/transpiler/x/rs/for_map_collection.error
rustc: exit status 1
error[E0277]: `(&str, i64)` doesn't implement `std::fmt::Display`
 --> /workspace/mochi/tests/transpiler/x/rs/for_map_collection.rs:6:24
  |
6 |         println!("{}", k);
  |                        ^ `(&str, i64)` cannot be formatted with the default formatter
  |
  = help: the trait `std::fmt::Display` is not implemented for `(&str, i64)`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
