tests/transpiler/x/rs/for_map_collection.rs
// Generated by Mochi transpiler v0.10.31 on 2025-07-20 08:42 +0700
use std::collections::HashMap;
fn main() {
    let mut m: HashMap<&str, i64> = HashMap::from([("a", 1), ("b", 2)]);
    for k in m {
        println!("{}", k);
    }
}
